# engine-native-external

./: CMakeLists.txt
cmake/: CocosExternalConfig.cmake
iot/: CMakeLists.txt
iot/arm64-v8a/fission_sdk/include/fission_sdk/: FissionInputManager.h  FissionXDJA.h  fission_app.h  fission_app_wrapper.h
sources/android-gamesdk/GameActivity/game-activity/include/game-activity/native_app_glue/: android_native_app_glue.c
